[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "cython>=3.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "liblpm"
version = "2.0.0"
description = "High-performance Longest Prefix Match library for Python"
readme = "README.md"
license = {text = "BSL-1.0"}
authors = [
    {name = "Murilo Chianfa", email = "murilo@made4it.com.br"},
]
maintainers = [
    {name = "Murilo Chianfa", email = "murilo@made4it.com.br"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "lpm",
    "longest-prefix-match",
    "routing",
    "networking",
    "ipv4",
    "ipv6",
    "trie",
    "cidr",
    "routing-table",
    "high-performance",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "cython>=3.0.0",
]
benchmark = [
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/MuriloChianfa/liblpm"
Documentation = "https://github.com/MuriloChianfa/liblpm/tree/main/bindings/python"
Repository = "https://github.com/MuriloChianfa/liblpm"
Issues = "https://github.com/MuriloChianfa/liblpm/issues"
Changelog = "https://github.com/MuriloChianfa/liblpm/releases"

[tool.scikit-build]
# CMake configuration
cmake.minimum-version = "3.16"
cmake.build-type = "Release"
cmake.verbose = false

# Wheel configuration
wheel.install-dir = "liblpm"
wheel.packages = ["src/liblpm"]

# Build directory
build-dir = "build/{wheel_tag}"

# Metadata
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/liblpm/__init__.py"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.cython]
language_level = "3"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["liblpm"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
    | _skbuild
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["liblpm"]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]
